syntax = "proto3";
package aspect.v2;
import "google/protobuf/any.proto";
import "aspect/v2/base_message.proto";


option go_package = "github.com/artela-network/artelasdk/types";

message ContextQueryRequest {
  DataSpaceType data_space = 1;
  repeated string conditions=2;
}

message ContextQueryResponse {
  RunResult result=1;
  string data_message_type=2;
  google.protobuf.Any data=3;
}

message CallMessageRequest{
  EthMessage message=1;
}
message CallMessageResponse{
  RunResult result=1;
  EthMessageCallResult data=2;
}

// MsgEthereumTxResponse defines the Msg/EthereumTx response type.
message EthMessageCallResult {

  // hash of the ethereum transaction in hex format. This hash differs from the
  // Tendermint sha256 hash of the transaction bytes. See
  // https://github.com/tendermint/tendermint/issues/6539 for reference
  string hash = 1;
  // logs contains the transaction hash and the proto-compatible ethereum
  // logs.
  repeated EthLog logs = 2;
  // ret is the returned data from evm function (result or data supplied with revert
  // opcode)
  bytes ret = 3;
  // vm_error is the error returned by vm execution
  string vm_error = 4;
  // gas_used specifies how much gas was consumed by the transaction
  uint64 gas_used = 5;
}
// Valida
message EthMessage{
  string from = 1;
  string to = 2;

  string gas_tip_cap = 3;
  // gas_fee_cap defines the max value for the gas fee
  string gas_fee_cap = 4;
  // gas defines the gas limit defined for the transaction.
  uint64 gas = 5;

  string gas_price = 6;

  string value = 7;
  uint64 nonce = 8;
  // data is the data payload bytes of the transaction.
  bytes input = 9;

  bool is_fake = 10;
}
message StateLogQueryRequest{
  string topic_equals=1;
  string address_equals=2;
  string tx_hash_equals=3;
}
message StateLogQueryResponse{
  RunResult result=1;
  repeated EthLog logs=2;
}

message CryptoRequest{
  string funcName=1;
  string data_message_type=2;
  google.protobuf.Any data=3;
}

message CryptoResponse{
  RunResult result=1;
  string data_message_type=2;
  google.protobuf.Any data=3;
}

message KeyValueSetRequest{
  string key=1;
  string value=2;
}
message KeyGetRequest{
  string key=1;
}

message StringDataResponse{
  RunResult result=1;
  string data=2;
}
message IntDataResponse{
  RunResult result=1;
  int64 data=2;
}
message AddressQueryRequest{
  string address_equals=1;
}
message StateQueryRequest{
  string address_equals=1;
  string hash_equals=2;
}

message StringData{
  string data=1;
}
message IntData{
  int64 data=1;
}
message BoolData{
  bool data=1;
}





enum DataSpaceType{
  TX_ASPECT_CONTEXT = 0;
  TX_EXT_PROPERTIES = 1;
  TX_CONTENT = 2;
  TX_STATE_CHANGES = 3;
  TX_CALL_TREE = 4;
  TX_RECEIPT = 5;
  TX_GAS_METER = 6;
  ENV_CONS_PARAMS = 7;
  ENV_CHAIN_CONFIG = 8;
  ENV_EVM_PARAMS = 9;
  ENV_BASE_INFO = 10;
  BLOCK_HEADER = 11;
  BLOCK_TXS= 12;
  BLOCK_GAS_METER= 13;
  BLOCK_MIN_GAS_PRICE= 14;
  BLOCK_LAST_COMMIT= 15;
  BLOCK_BLOCK_ID= 16;
  BLOCK_EVIDENCE= 17;
}